# gpt-2-vs-qwen-moe

./: .gitignore  README.md  main.py  pyproject.toml
configs/: baseline.yaml  qwen_moe.yaml
results/generations/: baseline_gpt2_small_generations.json  qwen_moe_6experts_top1_generations.json
results/metrics/: baseline_gpt2_small_metrics.json  qwen_moe_6experts_top1_metrics.json
scripts/: fetch_gutenberg_pt.py  generate_analysis_plots.py  generate_individual_plots.py
src/: dataset.py  train.py
src/models/: gpt2_baseline.py  qwen_moe.py
src/utils/: plotting.py
